Force the scrollbar in the middle pane for Windows resizing issue

--- a/index.css
+++ b/index.css
@@ -119,7 +119,8 @@ body {
   #card-pane {
     order: 2;
     flex-shrink: 1;
-     max-width: 380px;
+    max-width: 380px;
+    overflow-y: scroll;
   }
 
   #card-list-pane {
